--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <html>
 <head>
     <title>ANA SAYFA</title>
+    <meta charset="utf-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <link rel="stylesheet" href="css/style.css"/>
     <script src="https://kit.fontawesome.com/9531d28fcf.js" crossorigin="anonymous"></script>
     </head>
     <body>
-       <h1 align="center">Sayafama</h1>
+       <h1 align="center">WEB SAYFAMA</h1>
         <h2 align="center" ><font  color="blue" face="monotype corsiva" size="12" ><i>HOŞ GELDININZ</i></font></h2>
-        <p  ><B>Benim adim MEHMET İKBAL</B></p>
+        <p  ><B>Benim adım MEHMET İKBAL</B></p>
         <p>
-            Cvimi hangi dillerd görmek istersiniz 
+            Cvimi hangi dilde görmek istarsınız 
             lütfen birini seçin
         </p>
         <ol class="dil">
