--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
           <li><a class="faicon-google-plus" href="mailto:ekbaloo97@gmail.com" target="_blank" title="gmail"><i class="fab fa-google-plus-g"></i></a></li>
           <li><a class="fab fa-instagram" href="https://www.instagram.com/m.ikbal97/" target="_blank" title="instagram"></a></li>
           <li><a class="faicon-twitter" href="https://twitter.com/ekbaloo97" target="_blank"><i class="fab fa-twitter" title="twitter"></i></a></li>
+            <li><a href="tel:05315984264" target="_blank">tel</a></li>
            
          
         </ul>
