--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     </head>
     <body>
        <h1 align="center">WEB SAYFAMA</h1>
-        <h2 align="center" ><font  color="blue" face="monotype corsiva" size="12" ><i>HOŞ GELDININZ</i></font></h2>
+        <h2 align="center" ><font  color="blue" face="monotype corsiva" size="12" ><i>HOŞ GELDINIZ</i></font></h2>
         <p  ><B>Benim adım MEHMET İKBAL</B></p>
         <p>
-            Cvimi hangi dilde görmek istarsınız 
+            Cvimi hangi dilde görmek istarsanız 
             lütfen birini seçin
         </p>
         <ol class="dil">
