--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <meta name="google-site-verification" content="MTte6Ze2_Wz9xOGqwvICyk__-aT8_2mdMjzNBKmxDvY" />
     <title>ANA SAYFA</title>
     <meta charset="utf-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
