--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <script src="https://kit.fontawesome.com/9531d28fcf.js" crossorigin="anonymous"></script>
     </head>
     <body>
-       <h1 align="center">WEB SAYFAMA</h1>
-        <h2 align="center" ><font  color="blue" face="monotype corsiva" size="12" ><i>HOŞ GELDINIZ</i></font></h2>
+       <marquee><h2 align="center" ><font  color="blue" face="monotype corsiva" size="12" ><i>WEB SAYFAMA HOŞ GELDINIZ </i></font></h2></marquee>
         <p  ><B>Benim adım MEHMET İKBAL</B></p>
         <p>
             Cvimi hangi dilde görmek istarsanız 
