--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
        <marquee><h2 align="center" ><font  color="blue" face="monotype corsiva" size="12" ><i>WEB SAYFAMA HOŞ GELDINIZ </i></font></h2></marquee>
         <p  ><B>Benim adım MEHMET İKBAL</B></p>
         <p>
-            Cvimi hangi dilde görmek istarsanız 
+            Cvimi hangi dilde görmek istersiniz 
             lütfen birini seçin
         </p>
         <ol class="dil">
